syntax = "proto3";
package requests;

import "account.proto";
import "block_header.proto";
import "digest.proto";
import "note.proto";


message AccountUpdate {
    account.AccountId account_id = 1;
    digest.Digest account_hash = 2;
}

message ApplyBlockRequest {
    block_header.BlockHeader block = 1;
    repeated AccountUpdate accounts = 2;
    repeated digest.Digest nullifiers = 3;
    repeated note.NoteCreated notes = 4;
}

message CheckNullifiersRequest {
    repeated digest.Digest nullifiers = 1;
}

message GetBlockHeaderByNumberRequest {
    // The block number of the target block.
    //
    // If not provided, means latest know block.
    optional uint32 block_num = 1;
}

// State synchronization request.
message SyncStateRequest {
    // Send updates to the client starting at this block.
    uint32 block_num = 1;

    repeated account.AccountId account_ids = 2;

    // Tags and nullifiers are filters, both filters correspond to the high
    // 16bits of the real values shifted to the right `>> 48`.
    repeated uint32 note_tags = 3;
    repeated uint32 nullifiers = 4;
}

message GetBlockInputsRequest {
    repeated account.AccountId account_ids = 1;
    repeated digest.Digest nullifiers = 2;
}

message GetTransactionInputsRequest {
    account.AccountId account_id = 1;
    repeated digest.Digest nullifiers = 2;
}

message SubmitProvenTransactionRequest {
    // Transaction encoded using miden's native format
    bytes transaction = 1;
}

message ListNullifiersRequest {}

message ListAccountsRequest {}

message ListNotesRequest {}